--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>MoFo Contributor Dashboard (in Development)</title>
+        <title>Mozilla Contributors Dashboard (in development)</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
@@ -19,22 +19,52 @@
       <a href="https://www.mozilla.org/" id="tabzilla">mozilla</a>
     </div>
 
-    <div class=" dashboard-container">
+    <div class="dashboard-container">
       <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="alert alert-warning">
-              <span class="fa fa-warning"></span> <strong>DANGER - Dashboard in development (<a href="https://wiki.mozilla.org/Foundation/Metrics/Contributor_Dashboard/Status">Track status</a>)</strong>: Much data missing, but what's here is real-time.
+        <div class="navbar navbar-default" role="navigation">
+          <div class="container-fluid">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="#">Are we a million yet?</a>
             </div>
-          </div>
+            <div class="navbar-collapse collapse">
+              <ul class="nav navbar-nav">
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Team Dashboards <b class="caret"></b></a>
+                  <ul class="dropdown-menu">
+                    <li class="dropdown-header">Mozilla Foundation</li>
+                    <li><a href="#">Team 1</a></li>
+                    <li><a href="#">Team 5</a></li>
+                    <li><a href="#">Team 6</a></li>
+                    <li class="divider"></li>
+                    <li class="dropdown-header">Mozilla Corporation</li>
+                    <li><a href="#">Team 2</a></li>
+                    <li><a href="#">Team 3</a></li>
+                    <li><a href="#">Team 4</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </div><!--/.nav-collapse -->
+          </div><!--/.container-fluid -->
         </div>
+      </div>
+      <div class="container">
         <div class="row">
           <div class="col-md-3 current-numbers">
             <div class="total">
               <h1 id="active-total">Loading</h1>
               <h4>Active Contributors<br /></h4>
               <h5>(<span id="teamName"></span>)</h5>
-              <p class="small definition hidden-sm hidden-xs">The number of people who have taken a significant action in support of the Mozilla Foundation or our programs in the previous 12 months.</p>
+              <p class="small definition hidden-sm hidden-xs">The number of people who have taken a significant action in support of the Mozilla Project or our programs in the previous 12 months.</p>
+              <div class="alert alert-warning alert-dismissable">
+                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                <span class="fa fa-warning"></span> <strong>DANGER - Dashboard in development (<a href="https://wiki.mozilla.org/Foundation/Metrics/Contributor_Dashboard/Status">Track status</a>)</strong>: Much data missing, but what's here is real-time.
+              </div>
               <!-- <div class="hidden-sm hidden-xs">
                 <br /><br />
                 <h5>Future data points</h5>
@@ -60,41 +90,15 @@
     </div>
 
     <footer class="wm-footer">
-      <div class="container">
-        <div class="row" id="buckets">
-          <div class="col-sm-12">
-            <h5>NUMBER OF CONTRIBUTORS (BY CONTRIBUTION TYPE)</h5>
+      <div id="colophon" class="container">
+        <nav class="row">
+          <div class="col-md-4">
+            <h1 class="logo"><a href="https://mozilla.org">mozilla</a></h1>
+            <p class="license">Portions of this content are ©1998–2014 by individual mozilla.org contributors. Content available under a <a href="https://mozilla.org/en-US/foundation/licensing/website-content/">Creative Commons license</a>.</p>
+            <p>Fork this page in github and <a href="https://github.com/ppapadeas/areweamillionyet">contribute</a>!</p>
           </div>
-          <div class="col-sm-3">
-            <h4 id="bucket-code">Loading</h4>
-            <h5>Code &amp; Bugs</h5>
-          </div>
-          <div class="col-sm-3">
-            <h4 id="bucket-content">Loading</h4>
-            <h5>Content &amp; Translation</h5>
-          </div>
-          <div class="col-sm-3">
-            <h4 id="bucket-events">Loading</h4>
-            <h5>Events</h5>
-          </div>
-          <div class="col-sm-3">
-            <h4 id="bucket-training">Loading</h4>
-            <h5>Completed Training</h5>
-          </div>
-          <div class="col-sm-3">
-            <h4 id="bucket-community">Loading</h4>
-            <h5>Community Calls &amp; Partners</h5>
-          </div>
-          <div class="col-sm-3">
-            <h4 id="bucket-testing">Loading</h4>
-            <h5>Testing &amp; QA</h5>
-          </div>
-          <div class="col-sm-3">
-            <h4 id="bucket-apis">Loading</h4>
-            <h5>Build on our APIs</h5>
-          </div>
-
-        </div>
+          <div class="col-md-8"></div>
+        </nav>
       </div>
     </footer>
 
@@ -107,6 +111,8 @@
       <script src="bower_components/purl/purl.js"></script>
 
       <script src="js/main.js?breakcache=20140527"></script>
+
+      <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
       <script src="https://mozorg.cdn.mozilla.net/tabzilla/tabzilla.js"></script>
 
