Updating colors and documentation/links.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               <a class="navbar-brand" href="#">Are we a million yet?</a>
             </div>
             <div class="navbar-collapse collapse">
-              <ul class="nav navbar-nav">
+              <ul class="nav navbar-nav navbar">
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Team Dashboards <b class="caret"></b></a>
                   <ul class="dropdown-menu">
@@ -63,7 +63,7 @@
               <p class="small definition hidden-sm hidden-xs">The number of people who have taken a significant action in support of the Mozilla Project or our programs in the previous 12 months.</p>
               <div class="alert alert-warning alert-dismissable">
                 <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-                <span class="fa fa-warning"></span> <strong>DANGER - Dashboard in development (<a href="https://wiki.mozilla.org/Foundation/Metrics/Contributor_Dashboard/Status">Track status</a>)</strong>: Much data missing, but what's here is real-time.
+                <span class="fa fa-warning"></span> <strong>DANGER - Dashboard in development (<a href="https://wiki.mozilla.org/Contribute/Areweamillionyet">Track status</a>)</strong>: Much data missing, but what's here is real-time.
               </div>
               <!-- <div class="hidden-sm hidden-xs">
                 <br /><br />
