Adding teams in navigation

--- a/index.html
+++ b/index.html
@@ -30,22 +30,20 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#">Are we a million yet?</a>
+              <a class="navbar-brand" href="?">Are we a million yet?</a>
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar">
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Team Dashboards <b class="caret"></b></a>
                   <ul class="dropdown-menu">
-                    <li class="dropdown-header">Mozilla Foundation</li>
-                    <li><a href="#">Team 1</a></li>
-                    <li><a href="#">Team 5</a></li>
-                    <li><a href="#">Team 6</a></li>
+                    <li class="dropdown-header"><a href="?team=moco">Mozilla Corporation</a></li>
+                    <li><a href="?team=coding">Coding</a></li>
+                    <li><a href="?team=qa">Quality Assurance</a></li>
                     <li class="divider"></li>
-                    <li class="dropdown-header">Mozilla Corporation</li>
-                    <li><a href="#">Team 2</a></li>
-                    <li><a href="#">Team 3</a></li>
-                    <li><a href="#">Team 4</a></li>
+                    <li class="dropdown-header"><a href="?team=mofo">Mozilla Foundation</a></li>
+                    <li><a href="?team=opennews">Open News</a></li>
+                    <li><a href="?team=webmaker">Webmaker</a></li>
                   </ul>
                 </li>
               </ul>
