--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <h4>Active Contributors<br /></h4>
               <h5>(<span id="teamName"></span>)</h5>
               <p class="small definition hidden-sm hidden-xs">The rolling-total number of people who have taken a significant action in support of the Mozilla Project or our programs in the prior 12 months.</p>
-              <div class="alert alert-warning alert-dismissable">
+              <div class="alert alert-warning alert-dismissable caution">
                 <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
                 <span class="fa fa-warning"></span> <strong>CAUTION! Dashboard in development (<a href="https://wiki.mozilla.org/Contribute/Areweamillionyet">Find out more</a>)</strong>. This demo is showing contributors whose commits have been merged into the primary branch of each repo in github.
               </div>
