hide coding for demo

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Team Dashboards <b class="caret"></b></a>
                   <ul class="dropdown-menu">
                     <li class="dropdown-header"><a href="?team=moco">Mozilla Corporation</a></li>
-                    <li><a href="?team=coding">Coding</a></li>
+                    <!-- <li><a href="?team=coding">Coding</a></li> -->
                     <li><a href="?team=qa">Quality Assurance</a></li>
                     <li class="divider"></li>
                     <li class="dropdown-header"><a href="?team=mofo">Mozilla Foundation</a></li>
