Messaging for rules and system per team and overal.

--- a/index.html
+++ b/index.html
@@ -58,9 +58,19 @@
               <h4>Active Contributors<br /></h4>
               <h5>to: <span id="sourceName"></span></h5>
               <p class="small definition hidden-sm hidden-xs">The rolling-total number of people who have contributed to Mozilla or our programs in the prior 12 months.</p>
+              <p class="small rules hidden-sm hidden-xs">Active contributors numbers are calculated based on a set of activity
+                <a id="rules-link" href="#">conversion points</a>
+                as defined by Community Builders, based on integrated
+                <a id="rules-tooltip"
+                   data-toggle="tooltip"
+                   data-placement="bottom"
+                   title=""
+                   href="#">data sources
+                </a>.
+              </p>
               <div class="alert alert-warning alert-dismissable caution">
                 <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-                <span class="fa fa-warning"></span> <strong>CAUTION! Dashboard in development (<a href="https://wiki.mozilla.org/Contribute/Areweamillionyet">Find out more</a>)</strong>. This is a work in progress. We are still adding data sources to this.
+                <span class="fa fa-warning"></span> <strong>CAUTION! Dashboard in development (<a href="https://wiki.mozilla.org/Contribute/Areweamillionyet">Find out more</a>)</strong>. This is a work in progress. </br>Data sources are added continuously.
               </div>
               <!-- <div class="hidden-sm hidden-xs">
                 <br /><br />
