--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
             <h1 class="logo"><a href="https://mozilla.org">mozilla</a></h1>
             <p class="license">Portions of this content are ©1998–2014 by individual mozilla.org contributors. Content available under a <a href="https://mozilla.org/en-US/foundation/licensing/website-content/">Creative Commons license</a>.</p>
             <p>Fork this page in github and <a href="https://github.com/ppapadeas/areweamillionyet">contribute</a>!</p>
+            <p><a href="https://www.mozilla.org/contribute/">Get Involved with Mozilla</a></p>
           </div>
           <div class="col-md-8"></div>
         </nav>
